--- a/styles.css
+++ b/styles.css
@@ -636,7 +636,7 @@ html {
 
     .video {
         aspect-ratio: 9/16;
-        margin: -140% 0% 0% 2.5%;
+        margin: -155% 0% 0% 2.5%;
         width: 95%;
         height: 95%;
     }
@@ -646,7 +646,7 @@ html {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        margin: 16% 0% 10% 2.5%;
+        margin: 31% 0% 10% 2.5%;
         width: 95%;
         height: 130vh;
     }
@@ -804,12 +804,13 @@ html {
     }
 
     #bem-vindo {
+        font-size: 65%;
         margin: 0% 0% 0% 2%;
     }
 
     #logo-inicio {
         max-width: 80%;
-        margin: 15% 0% 0% -20%;
+        margin: 1% 0% 0% 20%;
     }
 
     .logo {
@@ -818,23 +819,24 @@ html {
 
     #descricao {
         width: 53%;
-        font-weight: 500;
-        font-size: 110%;
-        margin: -10% 0% 3% 1%;
+        font-weight: 400;
+        font-size: 60%;
+        margin: 0% 0% 3% 1%;
     }
 
     .sociais-inicio {
-        width: 20%;
+        width: 6.5%;
         position: absolute;
         z-index: 5;
         display: flex;
         flex-direction: row;
-        margin: 58% 0% 0% 18%;
+        margin: 50% 0% 0% 26%;
         align-items: center;
         justify-content: space-evenly;
     }
 
     .button-inicio {
+        font-size: 55%;
         padding: 7% 7% 7% 7%;
         margin-left: 2%;
     }
@@ -845,27 +847,27 @@ html {
 
     .video-pc {
         aspect-ratio: 9/16;
-        margin: 2.2% 0% 0% 1.5%;
-        height: 123.7%;
+        margin: 0.5% 0% 0% 18%;
+        height: 98%;
         position: absolute;
     }
 
     .musica-inicio {
         display: flex;
         flex-direction: column;
-        margin: 1% 0% 0% 87%;
+        margin: -4% 0% 0% 95%;
+        padding-right: 2%;
         width: 8%;
         position: absolute;
         z-index: 0;
     }
 
-
     /* inicio carrossel celular paisagem */
     .carrossel {
         display: flex;
-        margin: 12% 0% 0% 0.8%;
+        margin: 15% 0% 0% 3.8%;
         width: 97%;
-        height: 132vh;
+        height: 130vh;
     }
 
     /* inicio contatos celular paisagem */
@@ -881,7 +883,7 @@ html {
             display: flex;
             flex-direction: column;
             width: 5%;
-            margin: -1% 0% 0% 91.7%;
+            margin: -50% 0% 0% 97.5%;
             position: absolute;
             z-index: 5;
         }
@@ -896,6 +898,13 @@ html {
                 visibility: hidden;
             }
 
+            #eu-mob {
+                display: block;
+                position: relative;
+                margin-left: 3%;
+                width: 100%;
+              }
+
             #quadro {
                 visibility: hidden;
             }
@@ -906,10 +915,10 @@ html {
                 line-height: 1.261em;
                 font-family: 'fonte-economica', monospace;
                 text-align: center;
-                margin-left: 36%;
+                margin-left: 38%;
                 margin-top: 60.5%;
                 font-weight: 300;
-                font-size: 100%;
+                font-size: 48%;
                 letter-spacing: 0.05em;
                 text-shadow: 0.0441em 0.0606em 0.0125em rgba(0, 0, 0, 0.300000);
             }
@@ -917,11 +926,11 @@ html {
             #toque {
                 position: absolute;
                 z-index: 3;
-                font-size: 80%;
+                font-size: 33%;
                 direction: ltr;
                 font-family: 'fonte-geral', monospace;
                 text-align: center;
-                margin: 81% 0% 0% 35%;
+                margin: 83% 0% 0% 38%;
                 line-height: 100%;
                 text-transform: none;
                 letter-spacing: -0.05em;
@@ -935,7 +944,7 @@ html {
         .bora {
             display: flex;
             align-items: center;
-            margin: 82% 0% 2% 27.6%;
+            margin: -13% 0% 2% 19%;
             position: absolute;
             z-index: 5;
 
@@ -947,12 +956,13 @@ html {
                 text-transform: none;
                 letter-spacing: -0.05em;
                 font-weight: 500;
-                font-size: 102%;
+                font-size: 55%;
             }
         }
 
         #garanta {
-            margin: 40% 0% 0% 30%;
+            font-size: 30%;
+            margin: 0% 0% 0% 30%;
         }
 
         #space {
@@ -964,12 +974,13 @@ html {
             flex-direction: column;
             max-width: 5%;
             align-items: center;
-            margin: 33% 0% 0% 43.5%;
+            margin: -50% 0% 0% 43.5%;
             position: absolute;
             z-index: 6;
         }
 
         #siga-nos {
+            font-size: 50%;
             margin-right: 5%;
             padding: 25%;
             font-family: 'fonte-geral', monospace;
@@ -1295,7 +1306,7 @@ html {
     .contatos {
         #logo-fim {
             width: 33%;
-            margin: 0% 0% 0% 5%;
+            margin: 3% 0% 0% 5%;
             position: absolute;
             z-index: 6;
         }
@@ -1313,7 +1324,7 @@ html {
             width: 50%;
             display: flex;
             position: relative;
-            margin: -12% 0% 0% 50%;
+            margin: -6% 0% 0% 50%;
 
             #eu {
                 display: block;
@@ -1404,7 +1415,7 @@ html {
             flex-direction: column;
             max-width: 5%;
             align-items: center;
-            margin: 0% 0% 0% 45%;
+            margin: 3% 0% 0% 45%;
             position: absolute;
             z-index: 6;
         }
@@ -1713,7 +1724,7 @@ html {
     .musica-inicio {
         display: flex;
         flex-direction: column;
-        margin: 1% 0% 0% 88%;
+        margin: -2% 0% 0% 88%;
         width: 8%;
         position: absolute;
         z-index: 0;
@@ -1732,7 +1743,7 @@ html {
     .contatos {
         #logo-fim {
             width: 33%;
-            margin: 0% 0% 0% 5%;
+            margin: 1% 0% 0% 5%;
             position: absolute;
             z-index: 6;
         }
@@ -1741,7 +1752,7 @@ html {
             display: flex;
             flex-direction: column;
             width: 5%;
-            margin: -1% 0% 0% 91.7%;
+            margin: 1% 0% 0% 92%;
             position: absolute;
             z-index: 5;
         }
@@ -1753,6 +1764,7 @@ html {
             margin: 2% 0% 0% 52%;
 
             #eu {
+                display:block;
                 position: absolute;
                 margin-left: -6%;
                 z-index: 0;
@@ -1760,10 +1772,11 @@ html {
             }
 
             #eu-mob {
-                display:none;
+                visibility: hidden;
             }
 
             #quadro {
+                display: block;
                 width: 76%;
                 margin: -5% 0% 0% 15%;
                 position: absolute;
@@ -1798,6 +1811,7 @@ html {
             }
 
             #ej200 {
+                display: block;
                 position: absolute;
                 z-index: 4;
                 width: 21%;
@@ -1809,7 +1823,7 @@ html {
         .bora {
             display: flex;
             align-items: center;
-            margin: 32% 0% 2% 27.6%;
+            margin: 32% 0% 2% 29.6%;
             position: absolute;
             z-index: 5;
 
@@ -1826,7 +1840,7 @@ html {
         }
 
         #garanta {
-            margin: 40% 0% 0% 30%;
+            margin: 40% 0% 0% 33%;
         }
 
         #space {
@@ -2187,6 +2201,7 @@ html {
              margin: 0% 0% 0% 51.7%;
  
              #eu {
+                 display: block;
                  position: absolute;
                  margin-left: -6%;
                  z-index: 0;
@@ -2198,6 +2213,7 @@ html {
              }
  
              #quadro {
+                 display: block;
                  width: 76%;
                  margin: -5% 0% 0% 15%;
                  position: absolute;
@@ -2232,6 +2248,7 @@ html {
              }
  
              #ej200 {
+                 display: block;
                  position: absolute;
                  z-index: 4;
                  width: 21%;
@@ -2403,6 +2420,7 @@ html {
             margin: 0% 0% 0% 50%;
 
             #eu {
+                display: block;
                 position: absolute;
                 margin-left: -6%;
                 z-index: 0;
@@ -2414,6 +2432,7 @@ html {
             }
 
             #quadro {
+                display: block;
                 width: 76%;
                 margin: -5% 0% 0% 15%;
                 position: absolute;
@@ -2448,6 +2467,7 @@ html {
             }
 
             #ej200 {
+                display: block;
                 position: absolute;
                 z-index: 4;
                 width: 21%;
