--- a/styles.css
+++ b/styles.css
@@ -765,7 +765,7 @@ html {
       .button-fim {
         font-size: 66%;
         font-weight: 550;
-        margin: 121% 0% 0% 22%;
+        margin: 121% 0% 0% 22.5%;
         padding: 7%;
         position: absolute;
       }
@@ -1890,20 +1890,19 @@ html {
  }
  
  #logo-inicio {
-     width: 150%;
+     max-width: 150%;
  }
  
  .logo {
-     max-width: 100%;
-     margin: 5% 0% 0% 25%;
+     margin: 4% 0% 0% 10%;
      position: relative;
  }
  
  #descricao {
      width: 87.5%;
      font-weight: 300;
-     font-size: 120%;
-     margin: 18% 0% 5% 7%;
+     font-size: 230%;
+     margin: 8% 0% 5% 7%;
  }
  
  .space {
@@ -1929,7 +1928,7 @@ html {
      z-index: 5;
      display: flex;
      flex-direction: row;
-     margin: 123.5% 0% 0% 41.5%;
+     margin: 100% 0% 0% 41.5%;
      max-width: 15%;
      justify-content: space-evenly;
  }
@@ -1955,7 +1954,7 @@ html {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
-     margin: 33% 0% 10% 2.5%;
+     margin: 47% 0% 10% 2.5%;
      width: 95%;
      height: 132vh;
  }
@@ -1987,6 +1986,7 @@ html {
      margin: 0% 0% 0% 0%;
  
      #eu {
+         display: block;
          position: absolute;
          margin-left: -2%;
          z-index: 0;
@@ -1998,6 +1998,7 @@ html {
      }
  
      #quadro {
+         display: block;
          width: 76%;
          margin: -6% 0% 0% 20%;
          position: absolute;
@@ -2010,9 +2011,9 @@ html {
          line-height: 1.261em;
          font-family: 'fonte-economica', monospace;
          text-align: center;
-         margin: 60.5% 0% 0% 35%;
+         margin: 60.5% 0% 0% 43.5%;
          font-weight: 300;
-         font-size: 100%;
+         font-size: 180%;
          letter-spacing: 0.05em;
          text-shadow: 0.0441em 0.0606em 0.0125em rgba(0, 0, 0, 0.300000);
      }
@@ -2020,18 +2021,19 @@ html {
      #toque {
          position: absolute;
          z-index: 3;
-         font-size: 80%;
+         font-size: 150%;
          direction: ltr;
          font-family: 'fonte-geral', monospace;
          text-align: center;
-         margin-left: 36%;
-         margin-top: 80%;
+         margin-left: 43%;
+         margin-top: 80.3%;
          line-height: 100%;
          text-transform: none;
          letter-spacing: -0.05em;
      }
  
      #ej200 {
+         display: block;
          position: absolute;
          z-index: 4;
          width: 20%;
@@ -2045,7 +2047,7 @@ html {
      display: flex;
      position: absolute;
      width: 100%;
-     margin: 87% 0% 0% 5.5%;
+     margin: 87% 0% 0% 21%;
      z-index: 5;
  
      #chamada {
@@ -2056,7 +2058,7 @@ html {
          text-transform: none;
          letter-spacing: 0.02em;
          font-weight: 350;
-         font-size: 115%;
+         font-size: 195%;
          white-space: nowrap;
      }
  }
@@ -2065,15 +2067,16 @@ html {
      display: flex;
      max-width: 15%;
      align-items: center;
-     margin: 101.5% 0% 0% 11%;
+     margin: 101.5% 0% 0% 31.5%;
      padding-bottom: 3%;
      position: absolute;
      z-index: 6;
  }
  
  .button-fim {
-     margin: 125% 0% 0% 15%;
-     padding: 8%;
+     font-size: 150%;
+     margin: 116% 0% 0% 29.5%;
+     padding: 4%;
      position: absolute;
      z-index: 11;
  }
@@ -2427,10 +2430,6 @@ html {
                 margin-left: -6%;
                 z-index: 0;
                 width: 100%;
-            }
-
-            #eu-mob {
-                display: none;
             }
 
             #quadro {
