--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,12 @@ button {
 
 #eu {
     display: none;
+    visibility: hidden;
 }
 
 #eu-mob {
     display: none;
+    visibility: hidden;
 }
 
 #quadro {
