--- a/styles.css
+++ b/styles.css
@@ -2352,17 +2352,17 @@ html {
     }
 
     .sociais-inicio {
-        height: 14%;
+        height: 10%;
         position: absolute;
         z-index: 5;
         display: flex;
         flex-direction: row;
-        margin: 34.06% 0% 0% 15%;
+        margin: 34.5% 0% 0% 15%;
         align-items: center;
         justify-content: space-evenly;
 
         img {
-            width: 15%;
+            object-fit: contain;
         }
     }
 
@@ -2396,8 +2396,8 @@ html {
     /* inicio carrossel paisagem */
     .carrossel {
         display: flex;
-        margin: 20.15% 0% 0% 0%;
-        width: 100%;
+        margin: 23% 0% 0% 4.9%;
+        width: 90%;
         height: 132vh;
     }
 
