--- a/styles.css
+++ b/styles.css
@@ -128,17 +128,20 @@ html {
     /* inicio home retrato */
     .home {
         margin: 1%;
-        width: fit-content;
-        display: flex;
+        width: 100%;
+    }
+
+    #bem-vindo {
+        font-size: 60%;
+        margin-left: 8%;
     }
 
     #logo-inicio {
         max-width: 160%;
-        margin: 15% 0% 0% -40%;
+        margin: 15% 0% 0% 12%;
     }
 
     .logo {
-        margin: 0% 0% 0% 25%;
         position: relative;
     }
 
@@ -146,7 +149,9 @@ html {
         width: 87.5%;
         font-weight: 300;
         font-size: 92%;
-        margin: 5% 0% 5% 7%;
+        margin-top: 5%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .space {
@@ -162,24 +167,22 @@ html {
         z-index: 0;
     }
 
-
     .space-h {
         margin-right: 20%;
     }
 
     .sociais-inicio {
-        position: absolute;
-        z-index: 5;
         display: flex;
         flex-direction: row;
-        margin: 133.5% 0% 0% 41.5%;
-        max-width: 10%;
+        margin-top: 28%;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 12%;
         justify-content: space-evenly;
     }
 
     .button-inicio {
         font-size: 50%;
-        font-weight: 750;
         margin: 0.7% 0% 0.7% 0%;
     }
 
@@ -189,8 +192,11 @@ html {
     }
 
     .video {
+        display: flex;
         aspect-ratio: 9/16;
-        margin: -200% 0% 0% 2.5%;
+        margin-top: -185%;
+        margin-left: auto;
+        margin-right: auto;
         width: 95%;
         height: 95%;
     }
@@ -198,16 +204,17 @@ html {
     /* inicio carrossel retrato */
     .carrossel {
         display: flex;
-        flex-direction: row;
         flex-wrap: wrap;
-        margin: 23% 0% 10% 2.5%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 23%;
         width: 95%;
         height: 120vh;
     }
 
     /* inicio contatos retrato */
     .contatos {
-        display: flex;
+        width: 100%;
     }
 
     #logo-fim {
@@ -219,7 +226,7 @@ html {
         display: flex;
         flex-direction: column;
         width: 10%;
-        margin: 35% 0% 0% 84.5%;
+        margin: -90% 0% 0% 83.8%;
         position: absolute;
     }
 
@@ -227,7 +234,8 @@ html {
         display: flex;
         position: relative;
         width: 86%;
-        margin: 35% 0% 0% 0%;
+        margin-left: auto;
+        margin-right: auto;
 
         #eu {
             visibility: hidden;
@@ -236,7 +244,9 @@ html {
         #eu-mob {
             display: block;
             position: relative;
-            margin-left: 5%;
+            margin-top: 2%;
+            margin-left: -4%;
+            z-index: 0;
             width: 100%;
         }
 
@@ -246,14 +256,13 @@ html {
 
         #parte-do-show {
             position: absolute;
-            top: 57%;
-            left: 40%;
-            z-index: 11;
+            z-index: 2;
             line-height: 1.261em;
-            font-family: "fonte-economica", monospace;
+            font-family: 'fonte-economica', monospace;
             text-align: center;
+            margin: 60% 0% 0% 36.5%;
             font-weight: 300;
-            font-size: 80%;
+            font-size: 70%;
             letter-spacing: 0.05em;
             text-shadow: 0.0441em 0.0606em 0.0125em rgba(0, 0, 0, 0.300000);
         }
@@ -261,13 +270,13 @@ html {
         #toque {
             padding-top: 17%;
             position: absolute;
-            top: 65%;
-            left: 42%;
-            z-index: 10;
-            font-size: 55%;
+            z-index: 3;
+            font-size: 50%;
             direction: ltr;
-            font-family: "fonte-geral", monospace;
+            font-family: 'fonte-geral', monospace;
             text-align: center;
+            margin-left: 36.5%;
+            margin-top: 68.5%;
             line-height: 100%;
             text-transform: none;
             letter-spacing: -0.05em;
@@ -286,57 +295,62 @@ html {
             z-index: 12;
         }
     }
-
+    
+    
     .bora {
-        display: flex;
         position: absolute;
         width: 100%;
-        margin: 130% 0% 0% 6%;
+        margin-top: 1%;
+        z-index: 5;
 
         #chamada {
             direction: ltr;
-            font-family: "fonte-geral", monospace;
+            font-family: 'fonte-geral', monospace;
             text-align: center;
             line-height: 1.3em;
             text-transform: none;
             letter-spacing: 0.02em;
-            font-weight: 350;
-            font-size: 80.5%;
+            font-weight: 300;
+            font-size: 75%;
             white-space: nowrap;
         }
     }
 
     .sociais-fim {
         display: flex;
-        max-width: 12%;
+        justify-content: center;
+        width: 10%;
+        max-width: 100%;
         align-items: center;
-        margin: 147% 0% 0% 19.5%;
-        padding-bottom: 3%;
-        position: absolute;
+        margin-top: 16%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .button-fim {
-        margin: 165% 0% 0% 5%;
-        padding: 8%;
-        position: absolute;
+        display: flex;
+        justify-content: center;
+        margin-top: 5%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 5%;
     }
 
     #garanta {
-        font-size: 60%;
-        font-weight: 750;
-        margin-left: 15%;
+        font-size: 50%;
     }
 
     #siga-nos {
-        font-size: 70%;
-        margin-right: 5%;
-        font-family: "fonte-geral", monospace;
+        font-size: 50%;
+        margin-right: 15%;
+        font-family: 'fonte-geral', monospace;
         text-transform: none;
         flex: 1;
         flex-grow: 1;
         flex-shrink: 0;
         white-space: nowrap;
     }
+
 }
 
 /* celular minusculo na orientação paisagem */
@@ -419,11 +433,13 @@ html {
         z-index: 0;
     }
 
-
     /* inicio carrossel celular paisagem */
     .carrossel {
         display: flex;
-        margin: -4% 0% 0% 0.8%;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -4%;
         width: 97%;
         height: 110vh;
     }
@@ -564,8 +580,8 @@ html {
         max-width: 100%;
     }
 
-     /* inicio home retrato */
-     .home {
+    /* inicio home retrato */
+    .home {
         margin: 1%;
         width: 100%;
     }
@@ -575,7 +591,6 @@ html {
         margin-left: 8%;
     }
 
-   
     #logo-inicio {
         max-width: 160%;
         margin: 15% 0% 0% 12%;
@@ -867,7 +882,10 @@ html {
     /* inicio carrossel celular paisagem */
     .carrossel {
         display: flex;
-        margin: 15% 0% 0% 3.8%;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 15%;
         width: 97%;
         height: 130vh;
     }
@@ -1303,11 +1321,13 @@ html {
         z-index: 0;
     }
 
-
     /* inicio carrossel celular paisagem */
     .carrossel {
         display: flex;
-        margin: 12% 0% 0% 0.8%;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 12%;
         width: 97%;
         height: 132vh;
     }
@@ -1751,11 +1771,13 @@ html {
         z-index: 0;
     }
 
-
     /* inicio carrossel tablet paisagem */
     .carrossel {
         display: flex;
-        margin: 13% 0% 0% 1.4%;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 13%;
         width: 97%;
         height: 122vh;
     }
@@ -2201,11 +2223,13 @@ html {
         z-index: 0;
     }
 
-
     /* inicio carrossel tablet paisagem */
     .carrossel {
         display: flex;
-        margin: 22% 0% 0% 1.5%;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 22%;
         width: 97%;
         height: 100vh;
     }
@@ -2425,7 +2449,10 @@ html {
     /* inicio carrossel paisagem */
     .carrossel {
         display: flex;
-        margin: 23% 0% 0% 4.9%;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 23%;
         width: 90%;
         height: 132vh;
     }
@@ -2641,11 +2668,13 @@ html {
         z-index: 0;
     }
 
-
     /* inicio carrossel paisagem */
     .carrossel {
         display: flex;
-        margin: 23% 0% 0% 4.9%;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 23%;
         width: 90%;
         height: 132vh;
     }
@@ -2767,10 +2796,6 @@ html {
 
         .space-h {
             margin-right: 15%;
-        }
-
-        #garanta {
-            margin-left: 39.3%;
         }
 
         #siga-nos {
